samples/_failures_safe/1761541685_1ff5de_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f51cbff.c: In function ‘main’:
./samples/SAFE/__tmp_1f51cbff.c:129:32: error: expected ‘)’ at end of input
  129 |         if (scanf("%02x", &byte
      |                  ~             ^
      |                                )
./samples/SAFE/__tmp_1f51cbff.c:129:9: error: expected declaration or statement at end of input
  129 |         if (scanf("%02x", &byte
      |         ^~
./samples/SAFE/__tmp_1f51cbff.c:129:9: error: expected declaration or statement at end of input
